dist_man1_MANS=

if BUILD_VINCOIND
  dist_man1_MANS+=vincoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=vincoin-qt.1
endif

if BUILD_VINCOIN_CLI
  dist_man1_MANS+=vincoin-cli.1
endif

if BUILD_VINCOIN_TX
  dist_man1_MANS+=vincoin-tx.1
endif

if BUILD_VINCOIN_UTIL
  dist_man1_MANS+=vincoin-util.1
endif

if ENABLE_WALLET
if BUILD_VINCOIN_WALLET
  dist_man1_MANS+=vincoin-wallet.1
endif
endif
